tests/typing/fail/array/out_of_bounds_preupdate.act
contract A

constructor()

creates

  uint[3] ar := [1,2,3]
  uint x := 0

transition f()

iff
  x == 10

updates
  x := 5
  ar[1] := 5

ensures
  post(ar[pre(x)]) == 5


